@startuml
'https://plantuml.com/class-diagram

class Task {
    date
    description
    status

    gets()
    sets()
    toString()
}

class ToDo {
    main()
    start()
}

class ToDoController {
    ListView<Task> : taskList
    ObservableList : tasks
    FilteredList : filterTasks
}

javafx.Application*--ToDoController
ToDoController*--Task : at least 100 in tasks <
javafx.Application<|---ToDo

@enduml